# DiSy

./: .gitignore  .gitmodules  .hgignore
.hg/: bookmarks  shamap  undo.desc
.hg/cache/: branch2-served  tags2-visible
.hg/store/: 00changelog.i  00manifest.i  fncache  undo.backup.fncache  undo.phaseroots
.hg/store/data/: ~2egitignore.i  ~2ehgsub.i  ~2ehgsubstate.i
.hg/store/data/_di_sy/: meson.build.i  meson__options.txt.i
.hg/store/data/_di_sy/include/: _c_l_i11.hpp.i  json.hpp.i  shared.hpp.i
.hg/store/data/_di_sy/include/client/: client.hpp.i  crawler.hpp.i  hashing.hpp.i
.hg/store/data/_di_sy/include/server/: server.hpp.i
.hg/store/data/_di_sy/include/shared/: asio_networking.hpp.i  crawler.hpp.i  hashing.hpp.i  reader.hpp.i  writer.hpp.i
.hg/store/data/_di_sy/src/: _screenshot from 2019-02-24 14-07-27.png.i  test.txt.i
.hg/store/data/_di_sy/src/client/: client.cpp.i  downloader.cpp.i  main.cpp.i  uploader.cpp.i
.hg/store/data/_di_sy/src/protos/: _di_sy.proto.i
.hg/store/data/_di_sy/src/server/: main.cpp.i  server.cpp.i
.hg/store/data/_di_sy/tmp/: test.txt.i
.hg/store/data/asio/: _c_o_p_y_i_n_g.i  _i_n_s_t_a_l_l.i  _l_i_c_e_n_s_e__1__0.txt.i  _makefile.am.i  _makefile.i  _makefile.in.i  _r_e_a_d_m_e.i  aclocal.m4.i  asio.manifest.i  autogen.sh.i  boost__asio.manifest.i  boostify.pl.i  compile.i  config.guess.i  config.log.i  config.status.i  config.sub.i  configure.ac.i  configure.i  depcomp.i  install-sh.i  missing.i  release.pl.i  test-driver.i  tsify.pl.i
.hg/store/data/asio/autom4te.cache/: output.0.i  requests.i  traces.0.i  traces.1.i
.hg/store/data/asio/include/: _makefile.am.i  asio.hpp.i  ~2egitignore.i
.hg/store/data/asio/include/asio/: associated__allocator.hpp.i  associated__executor.hpp.i  async__result.hpp.i  basic__datagram__socket.hpp.i  basic__deadline__timer.hpp.i  basic__io__object.hpp.i  basic__raw__socket.hpp.i  basic__seq__packet__socket.hpp.i  basic__serial__port.hpp.i  basic__signal__set.hpp.i  basic__socket.hpp.i  basic__socket__acceptor.hpp.i  basic__socket__iostream.hpp.i  basic__socket__streambuf.hpp.i  basic__stream__socket.hpp.i  basic__streambuf.hpp.i  basic__streambuf__fwd.hpp.i  basic__waitable__timer.hpp.i  bind__executor.hpp.i  buffer.hpp.i  buffered__read__stream.hpp.i  buffered__read__stream__fwd.hpp.i  buffered__stream.hpp.i  buffered__stream__fwd.hpp.i  buffered__write__stream.hpp.i  buffered__write__stream__fwd.hpp.i  buffers__iterator.hpp.i  completion__condition.hpp.i  connect.hpp.i  coroutine.hpp.i  datagram__socket__service.hpp.i  deadline__timer.hpp.i  deadline__timer__service.hpp.i  defer.hpp.i  dispatch.hpp.i  error.hpp.i  error__code.hpp.i  execution__context.hpp.i  executor.hpp.i  executor__work__guard.hpp.i  (+49 more)
.hg/store/data/asio/include/asio/detail/: array.hpp.i  array__fwd.hpp.i  assert.hpp.i  atomic__count.hpp.i  base__from__completion__cond.hpp.i  bind__handler.hpp.i  buffer__resize__guard.hpp.i  buffer__sequence__adapter.hpp.i  buffered__stream__storage.hpp.i  call__stack.hpp.i  chrono.hpp.i  chrono__time__traits.hpp.i  completion__handler.hpp.i  concurrency__hint.hpp.i  conditionally__enabled__event.hpp.i  conditionally__enabled__mutex.hpp.i  config.hpp.i  event.hpp.i  (+178 more)
.hg/store/data/asio/src/: _makefile.am.i  _makefile.mgw.i  _makefile.msc.i  asio.cpp.i  asio__ssl.cpp.i  ~2egitignore.i
.hg/store/data/asio/src/doc/: _jamfile.v2.i  asio.png.i  asio.qbk.i  asioref.sty.i  asioref.xsl.i  boost__bind__dox.txt.i  doxy2qbk.pl.i  examples.qbk.i  history.qbk.i  index.xml.i  makepdf.pl.i  noncopyable__dox.txt.i  overview.qbk.i  project-root.jam.i  quickref.xml.i  reference.dox.i  reference.qbk.i  reference.xsl.i  release__checklist.htm.i  std__exception__dox.txt.i  tutorial.dox.i  tutorial.qbk.i  tutorial.xsl.i  using.qbk.i  ~2egitignore.i
.hg/store/data/asio/src/tests/: _makefile.am.i  ~2egitignore.i
.hg/store/data/asio/src/tools/: handlerviz.pl.i
CLI11/: CLI11.hpp
DiSy/: meson.build  meson_options.txt
DiSy/include/client/: client.hpp  crawler.hpp  hashing.hpp
DiSy/include/server/: server.hpp
DiSy/include/shared/: asioNetworking.hpp  crawler.hpp  hashing.hpp  reader.hpp  shared.hpp  writer.hpp
DiSy/src/: test.txt
DiSy/src/client/: client.cpp  downloader.cpp  main.cpp  uploader.cpp
DiSy/src/protos/: DiSy.proto
DiSy/src/server/: main.cpp  server.cpp
asio/: Makefile  Makefile.in  config.status  configure
asio/autom4te.cache/: output.1  requests  traces.0  traces.1
documentation/: documentation.aux  documentation.blg  documentation.tex  documentation.toc
documentation/_minted-documentation/: 2A04BF36DD6EC6B66819A6B496D674188C1F1CF4D041A969666359359E749F80.pygtex  60BCBE30B13DEFBE85C99A303896EE87062ED5C38281E2032534649440B9C6F5.pygtex  6EABF1CEFD3A594C44381CEF59C3D2A08C1F1CF4D041A969666359359E749F80.pygtex  8CF4F4E420B069FCB7DE97B68A083439062ED5C38281E2032534649440B9C6F5.pygtex  B21A69F0E699895C67AE508DAEB0A4F1062ED5C38281E2032534649440B9C6F5.pygtex  C00943CE2F01312CC5FE46623BDD92B6062ED5C38281E2032534649440B9C6F5.pygtex  DBFD9CAB0275924A7AF16ADDC9FAFFD9EF80A8B7BBBD42131417611352CDABB9.pygtex  ECDD503AC60EFAC83F1FA1305A7BBFDFEF80A8B7BBBD42131417611352CDABB9.pygtex
documentation/images/: first_stage.puml  protobufs.puml  second_stage.puml  third_stage.puml
(+624 files in other folders)
